--- a/password.html
+++ b/password.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem-vindo</title>
+    <title>Senha</title>
 </head>
 <body>
-    <h1>Bem-vindo</h1>
     <div>
-        <p>Digite seu nome:</p>
-        <input type="text" name="" id="" placeholder="Digite seu nome">
+        <p>Digite sua senha:</p>
+        <input type="text" name="" id="" placeholder="Digite sua senha">
     </div>
-    <a href="password.html">Próximo</a>
+    <button onclick="clickBtn()">Próximo</button>
     <footer>
         <div class="container">
             <div class="row">
@@ -24,5 +23,20 @@
     </footer>
 </body>
 <script>
+    var i = 0;
+
+    function init() {
+        i = 0;
+    }
+
+    function clickBtn() {
+        if (i == 0) {
+            alert("Essa senha ja esta sendo usada por Pedro97. Tente outra senha.");
+            i++;
+        } else {
+            window.location.href = "phoneNumber.html";
+        }
+    }
+
 </script>
 </html>
